[package]
name = "llm_api_access"
description = "A package to Query popular LLM"
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
async-trait = "0.1.68"
tokio = { version = "1.28.0", features = ["full"] }
