[package]
name = "llm_api_access"
description = "A package to query popular LLMs"
license = "MIT OR Apache-2.0"
version = "0.1.41"
edition = "2021"
repository = "https://github.com/scionsamurai/llm_api_crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json", "rustls-tls", "stream"], default-features = false }
async-trait = "0.1.68"
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"
async-stream = "0.3"