[build-system]
requires = ["maturin>=1.0,<1.5"]
build-backend = "maturin"

[project]
name = "llm_api_access"
version = "0.1.18"
description = "A package to Query popular LLM"
authors = [{name = "James Ruikka", email = "your.email@example.com"}]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]